gxkb (0.9.4-1) UNRELEASED; urgency=medium

  [ Debian Janitor ]
  * Remove constraints unnecessary since buster:
    + Build-Depends: Drop versioned constraint on libxklavier-dev.

  [ Mateusz Łukasik ]
  * New upstream release.

 -- Debian Janitor <janitor@jelmer.uk>  Wed, 02 Feb 2022 08:00:42 -0000

gxkb (0.9.3-1) unstable; urgency=medium

  * New upstream release.
  * Drop debian/patches/fix-cross-build.patch -- included upstream.

 -- Mateusz Łukasik <mati75@linuxmint.pl>  Sun, 30 Jan 2022 10:58:40 +0100

gxkb (0.9.2-1) unstable; urgency=medium

  * New upstream release.
  * Bump Standards-Version to 4.6.0 (no changes needed)

 -- Mateusz Łukasik <mati75@linuxmint.pl>  Wed, 29 Sep 2021 21:57:48 +0200

gxkb (0.9.0-1) unstable; urgency=medium

  * New upstream release.
    + Switch to GTK3. (Closes: #967515)
  * Bump Standards-Version to 4.5.1 (no changes needed)
  * d/control: Add Rules-Requires-Root.
  * Bump version d/watch.

 -- Mateusz Łukasik <mati75@linuxmint.pl>  Sat, 12 Dec 2020 14:26:14 +0100

gxkb (0.8.2-1) unstable; urgency=medium

  [ Mateusz Łukasik ]
  * New upstream release. (Closes: #956771, #957325)
  * Bump Standards-Version to 4.5.0 (no changes needed)
  * Bump minimal dh version to 13.
  * d/patches:
    + Add fix-cross-build.patch for fix FTCBFS: hard codes the build
      architecture pkg-config (Closes: #958484)
  * d/control: Switch B-D from libappindicator-dev to
    libayatana-appindicator-dev.

  [ Debian Janitor ]
  * Use secure copyright file specification URI.
  * debian/copyright: use spaces rather than tabs to start continuation
    lines.
  * Use secure URI in debian/watch.
  * Bump debhelper from old 10 to 12.
  * Set debhelper-compat version in Build-Depends.
  * Set upstream metadata fields: Archive, Bug-Database, Bug-Submit,
    Repository, Repository-Browse.

 -- Mateusz Łukasik <mati75@linuxmint.pl>  Wed, 29 Jul 2020 15:12:33 +0200

gxkb (0.8.0-1) unstable; urgency=medium

  * New upstream release.