@@ -1,6 +1,8 @@
 Format: https://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
 Upstream-Name: gxkb
 Source: https://sourceforge.net/projects/gxkb/files/
+Files-Excluded:
+    debian/*
 
 Files: *
 Copyright: 2013-2019, Dmitriy Poltavchenko <admin@linuxhub.ru>
