@@ -1,2 +1,0 @@
-SUFFIX=
-rm -rf debian
