@@ -1,2 +1,5 @@
 version=4
-https://sf.net/gxkb/gxkb-(\d\S*)\.tar.gz debian sh debian/repack.stub
+opts="searchmode=plain,\
+filenamemangle=s%.*/v?@ANY_VERSION@%@PACKAGE@-$1.tar.xz%" \
+https://api.github.com/repos/zen-tools/gxkb/releases?per_page=50 \
+https://api.github.com/repos/[^/]+/[^/]+/tarball/v?@ANY_VERSION@
