@@ -6,6 +6,8 @@ gxkb (0.9.4-1) UNRELEASED; urgency=medium
 
   [ Mateusz Łukasik ]
   * New upstream release.
+  * Change from repack script to Files-Excluded in d/copyright.
+  * Update d/watch.
 
  -- Debian Janitor <janitor@jelmer.uk>  Wed, 02 Feb 2022 08:00:42 -0000
 
